[workspace]
members = [".", "twch-server", "twch-cli"]

[package]
name = "twch"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.2", features = ["rustls"] }
ansi_term = "0.12.1"
futures = "0.3.15"
irc = "0.14.0"
itertools = "0.10.0"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
